# OctoPrint-AutoConnectPlus

./: .gitignore  MANIFEST.in  README.md  babel.cfg  pyproject.toml  requirements.txt  setup.py
.github/: release.yml
.github/workflows/: release.yaml
extras/: README.txt  autoconnectplus.md
octoprint_autoconnectplus/: __init__.py
octoprint_autoconnectplus/static/js/: autoconnectplus.js
octoprint_autoconnectplus/templates/: autoconnectplus_settings.jinja2
octoprint_autoconnectplus/translations/de/LC_MESSAGES/: messages.mo  messages.po
translations/: README.txt  messages.pot
